0.6.0
Fixed extra highlighting in multi box.
Fixed minor memory leak in window/application class.
Changing buffer in multiline edit now auto updates lines.
Added simple calendar to examples.
Added multiline external process call to lib class.
Added editable to line/multi edits.
Added list gadget class mouse down callback.
Set applicaion name and class correctly.
GUI fixes.
Removed some od legacy code.
Added CONTEXTCENTRE to gadget context menu.
Fixed segfault with LFSTK_getSingleProp.
List gadget visual fixes.
Updates to list gadget class.
Redone colours.
Removed more legacy code.
Added util function to lib lcass to get single cardinal/integer/string property for window.
Fixed mouse enter/exit callbacks in toggle.
Fixed segfault in image class.
Removed some old 'c' code.
Minor menu stack fix.
Fixed labels on translucent windows.
Fixed version number in .pc file.
Fixed spurious enter/exit callbacks when clicking gadget.
Fixed set/unset keep above/below.
Fixed setting gadget callbacks to NULL to stop callback.
Fixed setting enter/exit, mouse pressed/released separately.
Added callback for mouse enter/exit.

0.5.2
Added support for colour names including a 8 bit alpha def eg "#80ff00ff".
Added transparent windows ( see examples/subwindows ).
Loads of gui fixes.
Moved to 32bit tru colour windows.

0.5.1
Minor gui fix on scrollable menus.
Fixed scrolling sub menus.
Moved all monitor data/fnctios to main application class.
Fixed getting correct monitor for window.
Added scrollable menu.
Fixed makeall script.
Fixed stack smashing errors.
Set exapander gadget to use window back colour.
Install default colour scheme to ~/.config/LFS on first run of library.
Added default colour scheme.
Fixed about example.
Fixed not not setting button font colour form prefs.
Set default time out in app class.
Code clean.
Fixed paths in installed themes.
Fixed live update on font dialog.
Fixed lineedit size in expander gadget.
Fixed set label colour.
New prefs class.